--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="nearby_most">里你最近</string>
     <string name="project_detail">查看详情</string>
     <string name="project_road">路线导航</string>
+    <string name="rent_box">我要租箱</string>
 </resources>
